# real-estate-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run.yml
src/: main.py
src/nodes/: __init__.py  _common.py  freddie_mac.py  freddie_mac_transform.py  home_value.py  inventory.py  realtor.py  realtor_transform.py  redfin.py  redfin_transform.py  rent.py  sales.py  zillow_download.py
