[project]
name = "real-estate-data"
version = "0.1.0"
description = "Real estate market data connector (Zillow, Freddie Mac, Realtor.com, Redfin)"
requires-python = ">=3.11"
dependencies = [
    "s3fs>=2024.0",
    "fsspec>=2024.0",
    "psutil>=5.9.0",
    "httpx",
    "pyarrow",
    "pandas",
    "tenacity",
    "boto3",
    "ratelimit",
    "duckdb",
    "requests",
    "deltalake>=0.17.0",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
dev-dependencies = ["psutil>=5.9.0"]
